// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Flag test on ios renders Exclusive flag correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <ARTSurfaceView
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    >
      <ARTGroup
        opacity={1}
        transform={
          Array [
            0.4,
            0,
            0,
            0.4,
            0,
            0,
          ]
        }
      >
        <ARTGroup
          opacity={1}
          transform={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                0,
                10,
                2,
                10,
                20,
                2,
                20,
                10,
                2,
                10,
                0,
                1,
              ]
            }
            fill={
              Array [
                0,
                0.7725490196078432,
                0.11372549019607843,
                0.1411764705882353,
                1,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTGroup>
      </ARTGroup>
    </ARTSurfaceView>
  </View>
  <Text
    accessibilityLabel="flag-exclusive"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#C51D24",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-exclusive"
  >
    exclusive
  </Text>
</View>
`;

exports[`Article Flag test on ios renders New flag correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <ARTSurfaceView
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    >
      <ARTGroup
        opacity={1}
        transform={
          Array [
            0.4,
            0,
            0,
            0.4,
            0,
            0,
          ]
        }
      >
        <ARTGroup
          opacity={1}
          transform={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                0,
                10,
                2,
                10,
                20,
                2,
                20,
                10,
                2,
                10,
                0,
                1,
              ]
            }
            fill={
              Array [
                0,
                0.8901960784313725,
                0.27450980392156865,
                0.0196078431372549,
                1,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTGroup>
      </ARTGroup>
    </ARTSurfaceView>
  </View>
  <Text
    accessibilityLabel="flag-new"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#E34605",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-new"
  >
    new
  </Text>
</View>
`;

exports[`Article Flag test on ios renders Sponsored flag correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <ARTSurfaceView
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    >
      <ARTGroup
        opacity={1}
        transform={
          Array [
            0.4,
            0,
            0,
            0.4,
            0,
            0,
          ]
        }
      >
        <ARTGroup
          opacity={1}
          transform={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                0,
                10,
                2,
                10,
                20,
                2,
                20,
                10,
                2,
                10,
                0,
                1,
              ]
            }
            fill={
              Array [
                0,
                0.30196078431372547,
                0.30196078431372547,
                0.30196078431372547,
                1,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTGroup>
      </ARTGroup>
    </ARTSurfaceView>
  </View>
  <Text
    accessibilityLabel="flag-sponsored"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#4D4D4D",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-sponsored"
  >
    sponsored
  </Text>
</View>
`;

exports[`Article Flag test on ios renders Updated flag correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <ARTSurfaceView
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    >
      <ARTGroup
        opacity={1}
        transform={
          Array [
            0.4,
            0,
            0,
            0.4,
            0,
            0,
          ]
        }
      >
        <ARTGroup
          opacity={1}
          transform={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                0,
                10,
                2,
                10,
                20,
                2,
                20,
                10,
                2,
                10,
                0,
                1,
              ]
            }
            fill={
              Array [
                0,
                0.23529411764705882,
                0.5058823529411764,
                0.7450980392156863,
                1,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTGroup>
      </ARTGroup>
    </ARTSurfaceView>
  </View>
  <Text
    accessibilityLabel="flag-updated"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#3C81BE",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-updated"
  >
    updated
  </Text>
</View>
`;

exports[`Article Flag test on ios renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <ARTSurfaceView
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    >
      <ARTGroup
        opacity={1}
        transform={
          Array [
            0.4,
            0,
            0,
            0.4,
            0,
            0,
          ]
        }
      >
        <ARTGroup
          opacity={1}
          transform={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                0,
                10,
                2,
                10,
                20,
                2,
                20,
                10,
                2,
                10,
                0,
                1,
              ]
            }
            fill={
              Array [
                0,
                0,
                0,
                0,
                1,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTGroup>
      </ARTGroup>
    </ARTSurfaceView>
  </View>
  <Text
    accessibilityLabel="flag-articleFlag"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "black",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 1.4,
      }
    }
    testID="flag-articleFlag"
  >
    articleflag
  </Text>
</View>
`;
